--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "react-scripts": "0.9.0"
+    "react-scripts": "0.9.0",
+    "styled-components": "^1.4.3"
   },
   "dependencies": {
     "react": "^15.4.2",
