Implement movie page

--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,9 @@
     "react/prop-types": "off",
     "react/no-array-index-key": "off",
     "arrow-body-style": ["off", "as-needed"],
-    "no-unused-vars": ["warn"]
+    "no-unused-vars": ["warn"],
+    "object-shorthand": "off",
+    "import/prefer-default-export": "off"
   },
   "globals": {
     "document": true,
