--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "styled-components": "^1.4.3"
   },
   "dependencies": {
+    "date-fns": "^1.27.2",
     "es6-promise": "^4.0.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
@@ -20,7 +21,8 @@
     "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-actions": "^1.2.1",
-    "redux-thunk": "^2.2.0"
+    "redux-thunk": "^2.2.0",
+    "smooth-scroll": "cferdinandi/smooth-scroll"
   },
   "scripts": {
     "start": "NODE_PATH=src/ react-scripts start",
